# algorithm-question-challenge

./: CMakeLists.txt  README.md  build_and_run.sh
doc/: QUESTION.md  README.md
src/: main  main.cpp
